--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,9 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              "src/favicon-16x16.png",
+              "src/favicon-32x32.png",
+              "src/favicon-96x96.png",
               "src/assets"
             ],
             "styles": [
