--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@angular/platform-browser-dynamic": "^16.0.3",
     "@angular/router": "^16.0.3",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^16.0.0",
     "@angular-devkit/build-angular": "^16.0.3",
     "@angular/cli": "^16.0.3",
     "@angular/compiler-cli": "^16.0.3",
@@ -39,6 +39,10 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.3.2",
+    "postcss-scss": "^4.0.6",
+    "tailwindcss": "^3.3.2",
     "typescript": "~4.9.5"
   }
 }
